syntax = "proto3";
package clientchannel;
import "clientchannel/event.proto";
 
message Request {
	message InitAction {
		string group_id = 1;
		string subscriber_id = 2; 
	}

	message PublishAction {
		string tenant_id = 1;
		string topic = 2;
		bool broadcast = 3;
		Event event = 4;
	}

	message SubscribeAction {
		string topic = 1;
	}

	message UnsubscribeAction {
		string topic = 1;
	}

	message SnapshotAction {
		string topic = 1;
		string to_time = 2;
	}
	
	message InvalidateGdprAction {
		string tenant_id = 1;
		string topic = 2;
		string gdpr_id = 3;
	}

	message EventAck {
		string tenant_id = 1;
		string topic = 2;
		string event_id = 3;
	}

	message EventNotAck {
		string tenant_id = 1;
		string topic = 2;
		string event_id = 3;
		string reason = 4;
	}

	oneof payload {
		InitAction init = 1;
		PublishAction publish = 2;
		SubscribeAction subscribe = 3;
		UnsubscribeAction unsubscribe = 4;
		InvalidateGdprAction invalidate_gdpr = 5;
		SnapshotAction snapshot = 6;
		
		EventAck event_ack = 7;
		EventNotAck event_not_ack = 8;
	}
}
