syntax = "proto3";
package clientchannel;

message SnapshotRequest {
	string topic = 1;
	string to_time = 2;
}

message SnapshotResponse {}
